methods.picture.PatternPicture.scala.error
Compilation error:
PatternPicture:6: error: expected class or object definition
def faitDemiV(c:Color) {
^PatternPicture:22: error: expected class or object definition
def faitV(c1 :Color1 , c2 :Color2) {
^PatternPicture:26: error: Unmatched closing brace '}' ignored here
}
^